added auth without connecting db temporarily